[package]
name = "lodo_lsit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
futures = "0.3"
thiserror = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

axum = "0.6.18"
surrealdb = "1.0.0-beta.9"
sqlx = "0.6.3"
sqlb = "0.2.0"

